# codebunker

./: .gitignore  README
ant/: build-it.xml
apex/: BatchExample.cls  BatchUpdateOpportunityName.apxc  BusinessLogicClass.apxc  ControllingTrigger.apxt  DataBuilder.apex  LoggingService.cls  LoopTest.apxc  TestBatchExample.cls  TestDataBuilder.apex  TestExceptionStrategy.cls  TestLoggingService.cls  absence_violations_by_sa_and_date.apex  anon.metavalidation.apex  array_split_combine.apex  build_resource_map_from_sa_trigger.apex  bundle_investigate.apex  createSpecificationCMS.apex  cross_reference_users_resources_territories.apex  deleteLogs.apex  fields.apex  getChildRelationshipNames.apex  getWorkOrderDetailsMap.apex  getfilename-byname.apex  optimizer_script_test_data.apex  record_types_by_object.apex  sa_scheduling_helper.apex  scheduler_sa_assist.apex  scratch.apex  specification_maps.apex  wo-sa.apex
apex/cls/: BusinessLogicClass.apxc
apex/one-domain-instance/: AccountRequestHelper.cls  LinkedList.cls  RecursionControl.cls
apex/recursive-example/: OrderTriggerHandler.cls  StaticCounter.cls
apex/sfdx/: bash_aliases
apex/soql/: code-coverage.soql  getSAHistoryByIDandField.soql  getWo_SAByWONumber.soql  get_sa_by_created_dates.soql
apex/usr/: .bash_aliases  .bash_profile  .bashrc
c/: array_iterate.c  bars.c  character_count.c  far_cel.c  memory.c  word_count.c
java/: textpad_settings.txt
java/etc/: .exrc  .profile  TextPad License.txt  _.exrc  addme.sh  bash_aliases  bashrc_debian_chromebook  build.properties  colors.json  enum_comparator.example  git_bash_profile  java_path.src  nanorc  ntp.conf  pom-4.0.0.xml  pom.xml  restClientRestSettings.txt  textpad_javac_common.txt  textpad_settings.txt
java/j-ai/: README  link_to_source
java/language/: BoxAddition.java  Client1.java  CommonsFileUploadServlet.java  MainMethod.java  MyMapReduceRun.java  MyWorker.java  RESTClient.java  SingleArray.java  WhosOnDoor.java
java/lib/: pom.xml
java/lib/curl-java-0.2.3/: COPYING  ChangeLog  CurlIO.java  CurlRead.java  CurlWrite.java  GetJniVersion.java  MANIFEST  MakeCurlGlue.java  MakeCurlGlue.java.orig  MakeCurlGlue.pl  MakeCurlGlue.pl.orig  Makefile  Makefile.am  Makefile.in  Makefile.m32  Makefile.netware  Makefile.unix  README  acinclude.m4  aclocal.m4  buildconf  config.status  configure  configure.ac  curl-java.spec  curl-java.spec.in  curljava.c  curljava.c.orig  libtool  myset.bat  myset.sh  nwlib.c  test.java  test.java.orig
java/lib/curl-java-0.2.3/patches/: MakeCurlGlue.java.diff  MakeCurlGlue.pl.diff  curljava.c.diff  test.java.diff
java/misc/: ArchiveURLConnection.java  ClassVersionChecker.java  Extensible.java  MainMethod.java  MakeAHashOfThings.java  MakeBeautifulMusic.java  StringConverter.java  Test.java  TestClass.java  ToLinkOrNotToLink.java  ZipCodeValidation.java
java/music/: MakeBeautifulMusic.java
java/parser/: ParseWorkflow.java
java/random/: Anagrams2.java  CreateMenuAction.java  DebugJSPSyntax.java  FindTheBrace.java  Formatting.java  HTTPRequestPoster.java  Interfaceable.java  JodaTests.java  MainClass.java  Main_Generic.java  MakeAHashOfThings.java  ParseArrayList.java  Permutation.java  PermutationGenerator.java  SOAPClient.java  Schtring.java  ScratchPad.java  Sort.java  SortingTheDetectives.java  State.java  TestHashtable.java  TestLocale.java  TestParameterPassing.java  TestStrategy.java  TestStringBuilder.java  URLRequest.java  Wombat.java  WriteList.java  hanoiA.java
java/random-misc/: DoWhileBreak.java  HttpsClient.java  MainClient.java  ReverseString.java  TestReplace.java  TuringAutomaticMachineAddition.java  TuringAutomaticMachineComplexTrivial.java
java/tests/: TestMapReduceSort.java  TestPhoneticSearches.java
java/turing_machines/: TuringAutomaticMachine.java  TuringAutomaticMachineMultiplacation.java
java/various/: HttpParp.java  Implementable.java  LessThanOrEqualTo.java  LogicGates.java  Permutation.java  RESTClient.java  (+8 more)
javascript/: douglas_crockfords_code_convention.txt  hoisting_reference.txt
(+1552 files in other folders)
